# line-count

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  utils.rs
src/commands/: count.rs  install.rs  mod.rs
